--- a/RobotEditor/View/RobotValues.xaml
+++ b/RobotEditor/View/RobotValues.xaml
@@ -8,7 +8,7 @@
         xmlns:local="clr-namespace:RobotEditor.Model"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=viewModel:RobotViewModel, IsDesignTimeCreatable=false}"
-        Title="RobotValues" Height="296" Width="1280">
+        Title="RobotValues" Height="296" Width="1147.4">
     <Window.Resources>
         <ObjectDataProvider x:Key="JTypes"
                             MethodName="GetValues"
@@ -21,22 +21,23 @@
     <Grid>
         <Button x:Name="OK_Button" Content="OK" HorizontalAlignment="Left" Margin="586,223,0,0" VerticalAlignment="Top" Width="75" Click="OK_Button_Click"/>
         <Button x:Name="Cancel_Button" Content="Cancel" HorizontalAlignment="Left" Margin="446,223,0,0" VerticalAlignment="Top" Width="75" IsCancel="True"/>
-        <DataGrid x:Name="DHParam_Grid" HorizontalAlignment="Left" Height="174" Margin="10,10,0,0" VerticalAlignment="Top" Width="996" ItemsSource="{Binding Path=Joints}" AutoGenerateColumns="False"
+        <DataGrid x:Name="DHParam_Grid" HorizontalAlignment="Left" Height="174" Margin="10,10,0,0" VerticalAlignment="Top" Width="946" ItemsSource="{Binding Path=Joints}" AutoGenerateColumns="False"
                   SelectedItem="{Binding Path=SelectedJoint}" SelectionMode="Single" CanUserAddRows="False" CanUserDeleteRows="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="a [mm]" Width="100" Binding="{Binding Path=A, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"/>
-                <DataGridTextColumn Header="Alpha [°]" Width="100" Binding="{Binding Path=Alpha, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"/>
-                <DataGridTextColumn Header="d [mm]" Width="100" Binding="{Binding Path=D, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"/>
-                <DataGridTextColumn Header="Theta [°]" Width="100" Binding="{Binding Path=Theta, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"/>
-                <DataGridTextColumn Header="Max. Lim [° / mm]" Width="100" Binding="{Binding Path=MaxLim, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"/>
-                <DataGridTextColumn Header="Min. Lim [° / mm]" Width="100" Binding="{Binding Path=MinLim, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"/>
-                <DataGridComboBoxColumn Header="Joint Type" Width="100" ItemsSource="{Binding Source={StaticResource JTypes}}" SelectedItemBinding="{Binding Path=JoinType, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" />
-                <DataGridTextColumn Header="Speed [mm/s]" Width="100" Binding="{Binding Path=Speed, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"/>
-                <DataGridTextColumn Header="Accel. [mm/s²]" Width="100" Binding="{Binding Path=Acceleration, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"/>
+                <DataGridTextColumn Header="#" Width="30" Binding="{Binding Path=Nr, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" IsReadOnly="true"/>
+                <DataGridTextColumn Header="a [mm]" Width="100" Binding="{Binding Path=A, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" CanUserSort="False"/>
+                <DataGridTextColumn Header="Alpha [°]" Width="100" Binding="{Binding Path=Alpha, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" CanUserSort="False"/>
+                <DataGridTextColumn Header="d [mm]" Width="100" Binding="{Binding Path=D, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" CanUserSort="False"/>
+                <DataGridTextColumn Header="Theta [°]" Width="100" Binding="{Binding Path=Theta, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" CanUserSort="False"/>
+                <DataGridTextColumn Header="Max. Lim [° / mm]" Width="100" Binding="{Binding Path=MaxLim, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" CanUserSort="False"/>
+                <DataGridTextColumn Header="Min. Lim [° / mm]" Width="100" Binding="{Binding Path=MinLim, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" CanUserSort="False"/>
+                <DataGridComboBoxColumn Header="Joint Type" Width="100" ItemsSource="{Binding Source={StaticResource JTypes}}" SelectedItemBinding="{Binding Path=JoinType, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" CanUserSort="False"/>
+                <DataGridTextColumn Header="Speed [mm/s]" Width="100" Binding="{Binding Path=Speed, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" CanUserSort="False"/>
+                <DataGridTextColumn Header="Accel. [mm/s²]" Width="100" Binding="{Binding Path=Acceleration, ValidatesOnDataErrors=True, NotifyOnValidationError=True}" CanUserSort="False"/>
             </DataGrid.Columns>
         </DataGrid>
-        <Button x:Name="AddJoint_Button" Content="Add Joint" HorizontalAlignment="Left" Margin="1040,34,0,0" VerticalAlignment="Top" Width="139" Command="{Binding Path=AddJoint}"/>
-        <Button x:Name="DeletJoint_Button" Content="Delete Joint" HorizontalAlignment="Left" Margin="1040,71,0,0" VerticalAlignment="Top" Width="139" Command="{Binding Path=DeleteJoint}"/>
+        <Button x:Name="AddJoint_Button" Content="Add Joint" HorizontalAlignment="Left" Margin="977,12,0,0" VerticalAlignment="Top" Width="139" Command="{Binding Path=AddJoint}"/>
+        <Button x:Name="DeletJoint_Button" Content="Delete Joint" HorizontalAlignment="Left" Margin="977,49,0,0" VerticalAlignment="Top" Width="139" Command="{Binding Path=DeleteJoint}"/>
 
     </Grid>
 </Window>
