--- a/RobotEditor/View/MainWindow.xaml
+++ b/RobotEditor/View/MainWindow.xaml
@@ -30,9 +30,9 @@
                 x:Name="view_Carbody"
                 CameraRotationMode="Trackball"
                 ModelUpDirection="0,1,0"
-                Margin="10,274,24,48"
+                Margin="10,274,24,35"
                 ZoomExtentsWhenLoaded="True"
-                ItemsSource="{Binding Path=CarbodyModels}" Grid.ColumnSpan="2" Height="334" />
+                ItemsSource="{Binding Path=CarbodyModels}" Grid.ColumnSpan="2" />
             <Button
                 x:Name="button_AddCarbody"
                 Content="Add carbody"
@@ -43,13 +43,13 @@
                 Command="{Binding AddCarbody}"
                 Grid.ColumnSpan="2" />
             <Button
-                x:Name="button_FitToView"
+                x:Name="button_FitToViewCarbody"
                 Content="Fit to view"
                 HorizontalAlignment="Left"
                 Margin="287,619,0,0"
                 VerticalAlignment="Top"
                 Width="93"
-                Command="{Binding FitToView}"
+                Command="{Binding FitToViewCarbody}"
                 Grid.Column="1" />
             <DataGrid
                 x:Name="Carbodies_Grid"
@@ -87,7 +87,7 @@
         </Grid>
         <Grid
             HorizontalAlignment="Left"
-            Height="630"
+            Height="649"
             Margin="474,7,0,0"
             VerticalAlignment="Top"
             Width="447">
@@ -139,9 +139,9 @@
                 x:Name="view_Robot"
                 CameraRotationMode="Trackball"
                 ModelUpDirection="0,1,0"
-                Margin="10,274,32,22"
+                Margin="10,284,0,35"
                 ZoomExtentsWhenLoaded="True"
-                ItemsSource="{Binding Path=RobotModels}" HorizontalAlignment="Left" Width="413" Height="334" />
+                ItemsSource="{Binding Path=RobotModels}" HorizontalAlignment="Left" Width="413" />
             <Button
                 x:Name="button_EditRobot"
                 Content="Edit robot"
@@ -150,6 +150,15 @@
                 VerticalAlignment="Top"
                 Width="100"
                 Command="{Binding EditRobot}" />
+            <Button
+                x:Name="button_FitToViewRobot"
+                Content="Fit to view"
+                HorizontalAlignment="Left"
+                Margin="330,619,0,0"
+                VerticalAlignment="Top"
+                Width="93"
+                Command="{Binding FitToViewRobot}"
+    />
         </Grid>
         <Button x:Name="button_Compare" Content="Start comparison" HorizontalAlignment="Left" Margin="465,724,0,0" Width="128" Height="23" VerticalAlignment="Top" Command="{Binding Compare}"/>
         <Slider x:Name="slider_Precision" HorizontalAlignment="Left" Margin="334,680,0,0" Width="220" TickFrequency="10" Maximum="500" IsSnapToTickEnabled="True" TickPlacement="BottomRight" Minimum="10" Height="22" VerticalAlignment="Top" Value="100"/>
