--- a/RobotEditor/View/MainWindow.xaml
+++ b/RobotEditor/View/MainWindow.xaml
@@ -80,9 +80,9 @@
                 VerticalAlignment="Top"
                 Width="90"
                 Command="{Binding DeleteCarbody}" Grid.ColumnSpan="2" />
-            <CheckBox x:Name="checkBox_ShowHitPoints" Content="Show hit points" Grid.Column="1" HorizontalAlignment="Right" Margin="0,201,228,0" VerticalAlignment="Top" Command="{Binding HitPoints}" IsChecked="{Binding IsCheckedHitPoints}"/>
+            <CheckBox x:Name="checkBox_ShowHitPoints" Content="Show hit points" Grid.Column="1" HorizontalAlignment="Right" Margin="0,200,228,0" VerticalAlignment="Top" Command="{Binding HitPoints}" IsChecked="{Binding IsCheckedHitPoints}"/>
             <CheckBox x:Name="checkBox_ShowRayOrigins" Content="Show ray origins" Grid.Column="1" HorizontalAlignment="Left" Margin="74,235,0,0" VerticalAlignment="Top" Command="{Binding RayOrigins}" IsChecked="{Binding IsCheckedRayOrigins}" />
-            <CheckBox x:Name="checkBox_ShowBoundingBox" Content="Show bounding box" Grid.Column="1" HorizontalAlignment="Right" Margin="0,201,79,0" VerticalAlignment="Top" Command="{Binding BoundingBox}" IsChecked="{Binding IsCheckedBoundingBox}"/>
+            <CheckBox x:Name="checkBox_ShowBoundingBox" Content="Show bounding box" Grid.Column="1" HorizontalAlignment="Right" Margin="0,200,79,0" VerticalAlignment="Top" Command="{Binding BoundingBox}" IsChecked="{Binding IsCheckedBoundingBox}"/>
             <CheckBox x:Name="checkBox_ShowSymetryPlane" Content="Show symmetry plane" Grid.Column="1" HorizontalAlignment="Left" Margin="198,235,0,0" VerticalAlignment="Top" Command="{Binding SymmetryPlane}" IsChecked="{Binding IsCheckedSymmetryPlane}" />
         </Grid>
         <Grid
@@ -131,7 +131,7 @@
                 x:Name="button_CreateXML"
                 Content="Save XML"
                 HorizontalAlignment="Left"
-                Margin="151,200,0,0"
+                Margin="148,200,0,0"
                 VerticalAlignment="Top"
                 Width="100"
                 Command="{Binding CreateXML}" />
@@ -146,7 +146,7 @@
                 x:Name="button_EditRobot"
                 Content="Edit robot"
                 HorizontalAlignment="Left"
-                Margin="151,235,0,0"
+                Margin="148,235,0,0"
                 VerticalAlignment="Top"
                 Width="100"
                 Command="{Binding EditRobot}" />
@@ -159,6 +159,7 @@
                 Width="93"
                 Command="{Binding FitToViewRobot}"
     />
+            <CheckBox x:Name="checkBox_ShowManipulability" Content="Show manipulability" HorizontalAlignment="Left" Margin="296,200,0,0" VerticalAlignment="Top" Command="{Binding Manipulability}" IsChecked="{Binding IsCheckedManipulability}" />
         </Grid>
         <Button x:Name="button_Compare" Content="Start comparison" HorizontalAlignment="Left" Margin="465,724,0,0" Width="128" Height="23" VerticalAlignment="Top" Command="{Binding Compare}"/>
         <Slider x:Name="slider_Precision" HorizontalAlignment="Left" Margin="334,680,0,0" Width="220" TickFrequency="10" Maximum="500" IsSnapToTickEnabled="True" TickPlacement="BottomRight" Minimum="10" Height="22" VerticalAlignment="Top" Value="100"/>
