--- a/RobotEditor/App.xaml
+++ b/RobotEditor/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="RobotEditor.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="View/MainWindow.xaml">
+﻿<Application
+    x:Class="RobotEditor.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
-         
+
     </Application.Resources>
 </Application>
